# smckit

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  README.md  note.md  pixi.toml  plan.md  pyproject.toml
.github/workflows/: publish.yml
docs/: conf.py  gallery.md  index.rst  installation.md  psmc_internals.md  quickstart.md
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_generated/: method_status_matrix.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/smckit/: _core.html  settings.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/_generated/: method_status_matrix.rst.txt
docs/_build/html/_sources/agents/: algorithms.md.txt  using-smckit.md.txt
docs/_build/html/_sources/api/: index.rst.txt  settings.rst.txt  tl.rst.txt
docs/_build/html/_sources/developer/: contributing.md.txt  internals-dical2.md.txt  internals-esmc2.md.txt  internals-msmc-im.md.txt  internals-psmc.md.txt  internals-smcpp.md.txt  internals.md.txt  parity.md.txt  testing.md.txt
docs/_build/html/_sources/get-started/: installation.md.txt  introduction.md.txt  quickstart-asmc.md.txt  quickstart-dical2.md.txt  quickstart-esmc2.md.txt  quickstart-msmc-im.md.txt  quickstart-msmc2.md.txt  quickstart-psmc.md.txt  quickstart-smcpp.md.txt
docs/_build/html/_sources/guide/: choosing-a-method.md.txt  gallery.md.txt  interpreting-results.md.txt  plotting.md.txt  smcdata.md.txt
docs/_build/html/_sources/methods/: asmc.md.txt  dical2.md.txt  esmc2.md.txt  msmc-im.md.txt  msmc2.md.txt  (+3 more)
docs/_build/html/agents/: algorithms.html  using-smckit.html
docs/_build/html/api/: core.html  index.html  io.html  pl.html  pp.html  settings.html  ssm.html  tl.html
docs/_build/html/developer/: adding-a-method.html  architecture.html  contributing.html  internals-dical2.html  internals-esmc2.html  internals-msmc-im.html  internals-psmc.html  internals-smcpp.html  internals.html  parity.html  smcpp-parity-closure.html  testing.html
docs/_build/html/get-started/: installation.html  introduction.html  quickstart-asmc.html  quickstart-dical2.html  quickstart-esmc2.html  quickstart-msmc-im.html  quickstart-msmc2.html  quickstart-psmc.html  quickstart-smcpp.html
docs/_build/html/guide/: choosing-a-method.html  gallery.html  interpreting-results.html  io-formats.html  plotting.html  psmc-ssm.html  smcdata.html
docs/_build/html/methods/: asmc.html  dical2.html  esmc2.html  msmc-im.html  msmc2.html  psmc.html  smcpp.html  ssm.html
docs/_static/: custom.css  pretext-layout.js
docs/agents/: algorithms.md
docs/api/: core.rst  index.rst  io.rst  pl.rst  pp.rst  ssm.rst
docs/developer/: adding-a-method.md  architecture.md  internals-dical2.md  internals-esmc2.md  internals-smcpp.md  internals.md  parity.md  smcpp-parity-closure.md
docs/get-started/: installation.md  introduction.md  quickstart-asmc.md  quickstart-dical2.md  quickstart-esmc2.md  quickstart-msmc-im.md  quickstart-msmc2.md  quickstart-psmc.md  quickstart-smcpp.md
docs/guide/: choosing-a-method.md  gallery.md  interpreting-results.md  io-formats.md  psmc-ssm.md
docs/methods/: asmc.md  dical2.md  esmc2.md  msmc-im.md  msmc2.md  psmc.md  smcpp.md  ssm.md
scripts/: compare_dical2_oracle.py  compare_esmc2_backends.py  compare_smcpp_backends.py  evaluate_ssm.py  generate_dual_gallery.py  generate_esmc2_gallery.py  generate_esmc2_parity_gallery.py  generate_method_gallery.py  generate_smcpp_gallery.py
src/smckit/: __init__.py  _core.py  _method_status.py  settings.py
src/smckit/backends/: __init__.py  _numba.py  _numba_esmc2.py  _numpy.py
src/smckit/data/: __init__.py  method_status.json
src/smckit/data/examples/: __init__.py
src/smckit/ext/: __init__.py
src/smckit/ext/ssm/: __init__.py  _base.py  _jax_backend.py  _numpy_backend.py  _psmc_ssm.py
src/smckit/io/: __init__.py  _asmc.py  _dical2.py  _examples.py  _msmc_im.py  _multihetsep.py  _psmc_output.py  _psmcfa.py  _smcpp_input.py
src/smckit/pl/: __init__.py  _demographic.py
src/smckit/pp/: __init__.py
src/smckit/tl/: __init__.py  _asmc.py  _dical2.py  _esmc2.py  _implementation.py  _msmc.py  _msmc_im.py  _psmc.py  _smcpp.py  _smcpp_upstream_runner.py
src/smckit/upstream/: __init__.py  _install.py  _registry.py
tests/data/: NA12878_chr22.psmc  smcpp_onepop_larger.smc
tests/integration/: test_asmc_upstream_validation.py  test_asmc_validation.py  test_build_install_smoke.py  test_dical2_upstream_validation.py  test_dical2_validation.py  test_esmc2_upstream_validation.py  test_esmc2_validation.py  test_msmc2_upstream_validation.py  test_msmc_im_validation.py  test_msmc_validation.py  test_packaged_quickstarts.py  test_psmc_e2e.py  test_psmc_upstream_validation.py  test_psmc_validation.py  test_smcpp_parity_matrix.py  test_smcpp_upstream_validation.py  test_smcpp_validation.py  test_ssm_fit.py
tests/unit/: test_asmc.py  test_core.py  test_dical2.py  test_esmc2.py  test_examples.py  test_implementation.py  test_io.py  test_method_status.py  test_msmc.py  test_msmc_im.py  test_psmc.py  test_settings.py  test_smcpp.py  test_smcpp_input.py  test_ssm.py  test_upstream.py
(+18 files in other folders)
