[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smckit"
version = "0.0.1"
description = "Unified framework for Sequentially Markovian Coalescent methods"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kevin Korfmann" },
]
keywords = ["population-genetics", "coalescent", "demographic-inference", "PSMC", "MSMC", "SMC"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "numba>=0.59",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smckit"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that take significant time to run",
]
