[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smckit"
version = "0.0.1b0"
description = "Unified framework for Sequentially Markovian Coalescent methods"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Kevin Korfmann" },
]
keywords = ["population-genetics", "coalescent", "demographic-inference", "PSMC", "MSMC", "SMC"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/kevinkorfmann/smckit"
Repository = "https://github.com/kevinkorfmann/smckit"
Issues = "https://github.com/kevinkorfmann/smckit/issues"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "numba>=0.59",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.2.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smckit"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that take significant time to run",
]
